# StarGuide

./: .gitattributes  .gitignore  LICENSE  README.md  identify.py  pyproject.toml  requirements.txt
docs/: HOW_IT_WORKS.md
examples/: README.md
examples/image/: identify_image.py
examples/video/: identify_video.py
starguide/: __init__.py  astro.py  blind.py  config.py  detect.py  loader.py  motion.py  overlay.py  pipeline.py  project.py  solve.py  stack.py  stream.py  track.py  video.py
starguide/data/: README.md  constellation_data.json  hip_catalog.json  hip_names.json
tests/: conftest.py  test_blind.py  test_detect.py  test_examples.py  test_geometry.py  test_motion.py  test_planets.py  test_real_clip.py  test_solve_synthetic.py  test_video_blind.py
tools/: build_catalog.py
