[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "starguide"
version = "0.1.0"
description = "Realtime, calibration-free star, constellation and planet identification from photos and video"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "opencv-python>=4.7",
    "astropy>=5.3",
    "Pillow>=9.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
starguide = "identify:main"

[tool.setuptools]
packages = ["starguide"]

[tool.setuptools.package-data]
starguide = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
